feat(newBuild): new compose buils and other core changes
